# musly

./: .cmake-format.yaml  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  README.md
.github/workflows/: test.yml
cmake/: FindLibAV.cmake  FindLibResample.cmake  MuslyConfig.cmake.in  MuslyUninstall.cmake  libmusly.pc.in
doc/html/: dir_17a66f1fe5fc0016f2e86246c3406137.html  dir_498629ca7d5076ba54a0a03b916c3237.html  dir_b050bf215cc722406896952933e937a6.html  doxygen_crawl.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  index.html  menudata.js  musly_8h.html  musly_8h_source.html  musly__types_8h.html  musly__types_8h_source.html
libkissfft/: CMakeLists.txt
libkissfft/src/: _kiss_fft_guts.h  kiss_fftr.c
libmusly/: CMakeLists.txt
libmusly/include/musly/: musly.h  musly_types.h
libmusly/libresample/: CMakeLists.txt
libmusly/src/: decoder.cpp  decoder.h  lib.cpp  minilog.h  plugins.cpp  plugins.h  resampler.h  version.h.in
libmusly/src/decoders/: coreaudio.cpp  coreaudio.h  coreaudio_file.cpp  coreaudio_file.h  libav.cpp  libav.h  libav_file.cpp  libav_file.h  libav_functions.cpp  libav_functions.h  mediafoundation.cpp  mediafoundation.h  mediafoundation_file.cpp  mediafoundation_file.h  none.cpp  none.h  wav_writer.cpp  wav_writer.h
libresample/: CMakeLists.txt
libresample/src/: resample.c
musly/: CMakeLists.txt  main.cpp  tools.cpp  tools.h
test/: CMakeLists.txt  main.cpp
